finite sums clean-up, compactification; introduce \ineqd command

--- a/common/moment_estimation.tex
+++ b/common/moment_estimation.tex
@@ -137,7 +137,7 @@ which yields  $\mse(\meanest)= \frac{\sigma^2}{\xN}$ \xref{cor:mse_average}.
 That is, it turns out that $\frac{1}{\xN}\le\sum\lambda_n^2$ for all possible sequences $\seqn{\lambda_n}$.
 This fact is demonstrated by \pref{lem:lambda_sq} (next),
 which in turn follows more or less directly from the ubiquitous 
-\ineqe{Cauchy-Schwarz Inequality} \xref{thm:cs}.
+\ineqe{Cauchy-Schwarz Inequality} \xxref{thm:seq_cs}{thm:cs}.
 
 %---------------------------------------
 \begin{lemma}
@@ -160,24 +160,21 @@ which in turn follows more or less directly from the ubiquitous
   \item Proof of lemma:
         \begin{align*}
           \boxed{\frac{1}{\xN}}
-            &= \frac{1}{\xN}\brp{\sum_{n=1}^{\xN} \lambda_n}^2
-            && \text{by $\sum_{n=1}^{\xN} \lambda_n=1$ hypothesis}
-          \\&= \frac{1}{\xN}\brp{\sum_{n=1}^{\xN} a_n\lambda_n}^2
-            && \text{by $\seqn{a_n}\eqd\seqn{\ldots,1,1,1,\ldots}$ definition}
-            && \text{\xref{idef:lambda_sq_an}}
-          \\&\eqd \frac{1}{\xN}\inprod{a_n}{\lambda_n}^2
-            && \text{by definition of $\inprodn$}
-            && \text{\xref{idef:lambda_sq_inprod}}
-          \\&\boxed{\leq} \frac{1}{\xN}\norm{a_n}^2\norm{\lambda_n}^2
-            && \text{by \ineqe{Cauchy-Schwarz Inequality}}
-            && \text{\xref{thm:cs}}
-          \\&\eqd \frac{1}{\xN}\brp{\sum_{n=1}^{\xN} a_n^2} \brp{\sum_{n=1}^{\xN} \lambda_n^2}
-            && \text{by definition of $\normn$}
-            && \text{\xref{idef:lambda_sq_norm}}
+            &=    \frac{1}{\xN}\brp{\sum_{n=1}^{\xN} \lambda_n}^2
+            &&    \text{by $\sum_{n=1}^{\xN} \lambda_n=1$ hypothesis}
+          \\&=    \frac{1}{\xN}
+                  \brp{\sum_{n=1}^{\xN} a_n\lambda_n}^2
+            &&    \text{by $\seqn{a_n}\eqd\seqn{\ldots,1,1,1,\ldots}$ definition}
+            &&    \text{\xref{idef:lambda_sq_an}}
+          \\&\boxed{\le} \frac{1}{\xN}
+                  \brp{\sum_{n=1}^{\xN} a_n^2} 
+                  \brp{\sum_{n=1}^{\xN} \lambda_n^2}
+            &&    \text{by \ineqe{Cauchy-Schwartz inequality}}
+            &&    \text{\xref{thm:seq_cs}}
           \\&\eqd \frac{1}{\xN}\brp{\sum_{n=1}^{\xN} 1^2} \brp{\sum_{n=1}^{\xN} \lambda_n^2}
-            && \text{by definition of $\seqn{a_n}$}
-            && \text{\xref{idef:lambda_sq_an}}
-          \\&= \boxed{\sum_{n=1}^{\xN} \lambda_n^2}
+            &&    \text{by definition of $\seqn{a_n}$}
+            &&    \text{\xref{idef:lambda_sq_an}}
+          \\&=    \boxed{\sum_{n=1}^{\xN} \lambda_n^2}
         \end{align*}
 \end{enumerate}
 \end{proof}
