--- a/common/sty/math.sty
+++ b/common/sty/math.sty
@@ -98,6 +98,7 @@
 \newcommand{\equd}[1]{\textbf{#1}\index{#1|textbf}\index{equations!#1|textbf}}  % place here with bold style and in the index and under index properties! heading
 \newcommand{\ineq} [1]{#1\index{#1}\index{inequalities!#1}}                     % place here and in the index and under index inequalities! heading
 \newcommand{\ineqe}[1]{\emph{#1}\index{#1}\index{inequalities!#1}}              % place here with emphasis and in the index and under index inequalities! heading
+\newcommand{\ineqd}[1]{#1\index{#1|textbf}\index{inequalities!#1|textbf}}            % place here and in the index and under index theorems! heading
 \newcommand{\seqe}[1]{\emph{#1}\index{#1}\index{sequences!#1}}                  % place here with emphasis and in the index and under index structures! heading
 \newcommand{\vale}[1]{\emph{#1}\index{#1}\index{values!#1}}                     % place here with emphasis and in the index and under index values! heading
 \newcommand{\valb}[1]{\textbf{#1}\index{#1}\index{values!#1}}                     % place here with emphasis and in the index and under index values! heading
