--- a/common/sums.tex
+++ b/common/sums.tex
@@ -104,85 +104,16 @@ Let $+$ be an addition operator on a tuple $\tuple{x_n}{m}{\xN}$.
         &= \mcom{\brp{\sum_{n=m}^{\xN} x_n}}{\prope{associative}} + x_{\xN+1}
         && \text{by \prefp{def:sum}}
       \\&= \brp{\sum_{n=m}^{\xL} x_n + \brp{\sum_{n=\xL+1}^{\xM} x_n + \sum_{n=\xM+1}^{\xN} x_n}} + x_{\xN+1}
-      \\&= \brp{\brp{\sum_{n=m}^{\xL} x_n + \sum_{n=\xL+1}^{\xM} x_n} + \sum_{n=\xM+1}^{\xN} x_n} + x_{\xN+1}
+       &&= \brp{\brp{\sum_{n=m}^{\xL} x_n + \sum_{n=\xL+1}^{\xM} x_n} + \sum_{n=\xM+1}^{\xN} x_n} + x_{\xN+1}
       \\&= \brp{\sum_{n=m}^{\xL} x_n + \sum_{n=\xL+1}^{\xM} x_n} + \brp{\sum_{n=\xM+1}^{\xN} x_n + x_{\xN+1}}
-      \\&= \brp{\sum_{n=m}^{\xL} x_n + \sum_{n=\xL+1}^{\xM} x_n} + \brp{\sum_{n=\xM+1}^{\xN+1} x_n}
+       &&= \brp{\sum_{n=m}^{\xL} x_n + \sum_{n=\xL+1}^{\xM} x_n} + \brp{\sum_{n=\xM+1}^{\xN+1} x_n}
     \end{align*}
 \end{enumerate}
 \end{proof}
 
-%%=======================================
-%\section{Convexity}
-%%=======================================
-%%--------------------------------------
-%\begin{theorem}[\thm{Jensen's Inequality}]
-%\footnote{
-%  \citerpg{mitrinovic2010}{6}{9048142253}\\
-%  \citerpg{bollobas1999}{3}{0521655773} \\
-%  %\citerpg{lay1982}{7}{0471095842}\\
-%  \citorpp{jensen1906}{179}{180}
-%  }
-%\label{thm:seq_jensen_ineq}
-%\index{inequalities!Jensen's}
-%%--------------------------------------
-%Let $\ff\in\clFrr$ be a function.
-%\thmbox{
-%  \brb{\begin{array}{FMD}
-%    1. & \text{$\ff$ is \prope{convex}}  & and \\
-%    2. & $\ds\sum_{n=1}^\xN \lambda_n=1$ & (\structe{weights})
-%  \end{array}}
-%  \implies
-%  \brb{
-%    \ff\brp{\sum_{n=1}^\xN \lambda_n \: \vx_n}
-%    \le \sum_{n=1}^\xN \lambda_n\:\ff\brp{\vx_n}
-%    \qquad
-%    \forall \vx_n \in \setD,\;\xN\in\Zp
-%    }
-%  }
-%\end{theorem}
-%\begin{proof}
-%Proof is by induction:
-%\begin{align*}
-%  \intertext{1. Proof that statement is true for $\xN=1$:}
-%    \ff\left(\sum_{n=1}^{\xN=1} \lambda_n \: x_n\right)
-%      &=   \ff(1\cdot  x_1)
-%      &&   \text{by $\xN=1$ hypothesis}
-%    \\&=   \sum_{n=1}^{\xN=1} \ff(x_n)
-%      &&   \text{by $\xN=1$ hypothesis}
-%    \\&=   \sum_{n=1}^{\xN=1} \lambda_n\:\ff(x_n)
-%    \\
-%  \intertext{2. Proof that statement is true for $\xN=2$:}
-%    \ff\left(\sum_{n=1}^{\xN=2} \lambda_n \:  x_n\right)
-%      &=   \ff(\lambda_1  x_1 + \lambda_2 x_2)
-%    \\&\le \lambda_1 \ff( x_1) + \lambda_2 \ff( x_2)
-%      &&   \text{by convexity hypothesis}
-%    \\&=   \sum_{n=1}^{\xN=2} \lambda_n\:\ff( x_n)
-%    \\
-%  \intertext{3. Proof that if the statement is true for $\xN$, then it is also true for $\xN+1$:}
-%    \ff\left(\sum_{n=1}^{\xN+1} \lambda_n \:  x_n\right)
-%      &=   \ff\left(\sum_{n=1}^{\xN} \lambda_n \:  x_n + \lambda_{\xN+1} x_{\xN+1}\right)
-%    \\&=   \ff\left([1-\lambda_{\xN+1}]\sum_{n=1}^{\xN} \frac{\lambda_n}{1-\lambda_{\xN+1}} \:  x_n + \lambda_{\xN+1} x_{\xN+1}\right)
-%    \\&\le [1-\lambda_{\xN+1}]\ff\left(\sum_{n=1}^{\xN} \frac{\lambda_n}{1-\lambda_{\xN+1}} \:  x_n \right)
-%         + \lambda_{\xN+1}\ff( x_{\xN+1})
-%      &&   \text{by convexity hypothesis}
-%    \\&\le [1-\lambda_{\xN+1}]\sum_{n=1}^{\xN} \frac{\lambda_n}{1-\lambda_{\xN+1}}\ff( x_n)
-%         + \lambda_{\xN+1}\ff( x_{\xN+1})
-%      &&   \text{by ``true for $\xN$" hypothesis}
-%    \\&=   \sum_{n=1}^{\xN} \lambda_n \ff( x_n) + \lambda_{\xN+1}\ff( x_{\xN+1})
-%    \\&=   \sum_{n=1}^{\xN+1} \lambda_n \ff( x_n)
-%    \\
-%  \intertext{4. Since the statement is true for $\xN=1$, $\xN=2$, and
-%                true for $\xN$ $\implies$ true for $\xN+1$,
-%                then it is true for $\xN=1,2,3,4,\ldots$}
-%\end{align*}
-%\end{proof}
-
-
 %=======================================
 \section{Means}
 %=======================================
-
-
 %=======================================
 \subsection{Weighted {\fntFreeSerif\textphi}-means}
 %=======================================
@@ -227,32 +158,44 @@ Let $\fM_\fphi\brp{\tuplen{x_n}}$ be the $\tuple{\lambda_n}{1}{\xN}$ weighted $\
   \intertext{1. Case where $\fphi\fpsi^{-1}$  is \prope{convex} and $\fphi$ is \prope{increasing}:}
   \fM_\fphi\brp{\tuplen{x_n}}
     &\eqd \fphi^{-1}\brp{\sum_{n=1}^{\xN} \lambda_n \fphi\brp{x_n}}
-    &&    \text{by definition of $\fM_\fphi$ (\prefp{def:seq_Mphi})}
+    &&    \text{by definition of $\fM_\fphi$}
+    &&    \text{\xref{def:seq_Mphi}}
   \\&=    \fphi^{-1}\brp{\sum_{n=1}^{\xN} \lambda_n \fphi\fpsi^{-1}\fpsi\brp{x_n}}
     &&    \text{by definition of $\fpsi^{-1}$}
   \\&\ge  \fphi^{-1}\brp{\fphi\fpsi^{-1}\sum_{n=1}^{\xN} \lambda_n \fpsi\brp{x_n}}
-    &&    \text{by \thme{Jensen's Inequality}\ifsxref{convex}{thm:jensen_ineq}}
+    &&    \text{by \ineqe{Jensen's Inequality}}
+    &&    \text{\ifsxref{convex}{thm:jensen_ineq}}
   \\&=    \brp{\fpsi^{-1}\sum_{n=1}^{\xN} \lambda_n \fpsi\brp{x_n}}
     &&    \text{by definition of $\fpsi^{-1}$}
   \\&\eqd \fM_\fpsi\brp{\tuplen{x_n}}
-    &&    \text{by definition of $\fM_\fpsi$ (\prefp{def:seq_Mphi})}
+    &&    \text{by definition of $\fM_\fpsi$}
+    &&    \text{\xref{def:seq_Mphi}}
   %
   \intertext{2. Case where $\fphi\fpsi^{-1}$  is \prope{convex} and $\fphi$ is \prope{decreasing}:}
   \fM_\fphi\brp{\tuplen{x_n}}
     &\eqd \fphi^{-1}\brp{\sum_{n=1}^{\xN} \lambda_n \fphi\brp{x_n}}
-    &&    \text{by definition of $\fM_\fphi$ (\prefp{def:seq_Mphi})}
+    &&    \text{by definition of $\fM_\fphi$}
+    &&    \text{\xref{def:seq_Mphi}}
   \\&=    \fphi^{-1}\brp{\sum_{n=1}^{\xN} \lambda_n \fphi\fpsi^{-1}\fpsi\brp{x_n}}
     &&    \text{by definition of $\fpsi^{-1}$}
   \\&\le  \fphi^{-1}\brp{\fphi\fpsi^{-1}\sum_{n=1}^{\xN} \lambda_n \fpsi\brp{x_n}}
-    &&    \text{by \thme{Jensen's Inequality} and because $\fphi^{-1}$ is \prope{decreasing}}
+    &&    \begin{array}{M}
+            by  \ineqe{Jensen's Inequality}               \\
+            and because $\fphi^{-1}$ is \prope{decreasing}
+          \end{array}
+    &&    \begin{array}{M}
+            \ifxref{convex}{thm:jensen_ineq}\\
+            (by hypothesis)
+          \end{array}
   \\&=    \brp{\fpsi^{-1}\sum_{n=1}^{\xN} \lambda_n \fpsi\brp{x_n}}
     &&    \text{by definition of $\fpsi^{-1}$}
   \\&\eqd \fM_\fpsi\brp{\tuplen{x_n}}
-    &&    \text{by definition of $\fM_\fpsi$ (\prefp{def:seq_Mphi})}
+    &&    \text{by definition of $\fM_\fpsi$}
+    &&    \text{\xref{def:seq_Mphi}}
 \end{align*}
 \end{proof}
 
-One of the most well known inequalities in mathematics is \thme{Minkowski's Inequality}
+One of the most well known inequalities in mathematics is \ineqe{Minkowski's Inequality}
 (1910, \prefp{thm:lp_minkowski}). % which demonstrates
 %\\\indentx$\ds
 %  \brp{\sum_{n=1}^{\xN} \abs{x_n+y_n}^p}^\frac{1}{p}
@@ -284,15 +227,13 @@ And Milovanovi/'c and Milovanov/'c (1979) generalized this even further to a \hi
   }
 %---------------------------------------
 \thmboxt{
-  $\ds\brb{\begin{array}{FMD}
-    1. & $\fphi$ is \prope{convex} & and \\
-    2. & $\fphi$ is \prope{strictly monotonic} & and \\
-    3. & $\fphi(0)=0$ & and \\
-    4. & $\log\circ\fphi\circ\exp$ is \prope{convex}
+  $\ds\brb{\begin{array}{FMD | FMD}
+    (1). & $\fphi$ is \prope{convex}             & and & (3). & $\fphi(0)=0$ & and \\                      
+    (2). & $\fphi$ is \prope{strictly monotonic} & and & (4). & $\log\circ\fphi\circ\exp$ is \prope{convex}
   \end{array}}
   \quad\implies\quad$
   \\\qquad\qquad
-  $\ds{
+  $\ds\brb{
   \fphi^{-1}\brp{\sum_{n=1}^{\xN} \lambda_n \fphi\brp{x_n+y_n}}
   \le
   \fphi^{-1}\brp{\sum_{n=1}^{\xN} \lambda_n \fphi\brp{x_n}}
@@ -337,7 +278,7 @@ Let $\fM_{\fphi(x;r)}\brp{\tuplen{x_n}}$ be the $\tuple{\lambda_n}{1}{\xN}$ weig
   }
 \label{thm:seq_Mr}
 %---------------------------------------
-Let $\fM_{\fphi(x;r)}\brp{\tuplen{x_n}}$ be \hie{power mean} with parameter $r$ of an $\xN$-tuple $\tuplexn{x_n}$.
+Let $\fM_{\fphi(x;r)}\brp{\tuplen{x_n}}$ be \fncte{power mean} with parameter $r$ of an $\xN$-tuple $\tuplexn{x_n}$.
 Let $\Rx$ be the set of extended real numbers $\brp{\Rx\eqd\R\setu\setn{-\infty,\,\infty}}$.%
 \footnote{
   \citerppgc{rana2002}{385}{388}{0821829742}{Appendix A}
@@ -454,20 +395,20 @@ Let $\Rx$ be the set of extended real numbers $\brp{\Rx\eqd\R\setu\setn{-\infty,
       \\&= \exp\brb{\frac{\ds\sum_{n=1}^{\xN}\lambda_n\pderiv{}{r}\brp{x_n^r}}
                          {\ds\sum_{n=1}^{\xN}\lambda_n\brp{x_n^r}}
                    }_{r=0}
-      \\&= \exp\brb{\frac{\ds\sum_{n=1}^{\xN}\lambda_n\pderiv{}{r}\exp\brp{\ln\brp{x_n^r}}}
+       &&= \exp\brb{\frac{\ds\sum_{n=1}^{\xN}\lambda_n\pderiv{}{r}\exp\brp{\ln\brp{x_n^r}}}
                          {\ds\sum_{n=1}^{\xN}\lambda_n}
                    }_{r=0}
       \\&= \exp\brb{\frac{\ds\sum_{n=1}^{\xN}\lambda_n\pderiv{}{r}\exp\brp{r\ln\brp{x_n}}}
                          {1}
                    }_{r=0}
-      \\&= \exp\brb{\sum_{n=1}^{\xN}\lambda_n\pderiv{}{r}\exp\brp{r\ln\brp{x_n}}
+       &&= \exp\brb{\sum_{n=1}^{\xN}\lambda_n\pderiv{}{r}\exp\brp{r\ln\brp{x_n}}
                    }_{r=0}
       \\&= \exp\brb{\sum_{n=1}^{\xN}\lambda_n\exp\brb{r\ln{x_n}}\ln\brp{x_n}
                    }_{r=0}
-      \\&= \exp\brb{\sum_{n=1}^{\xN}\lambda_n\ln\brp{x_n}}
+       &&= \exp\brb{\sum_{n=1}^{\xN}\lambda_n\ln\brp{x_n}}
       \\&= \exp\brb{\sum_{n=1}^{\xN}\ln\brp{x_n^{\lambda_n}}}
-      \\&= \exp\brb{\ln\prod_{n=1}^{\xN}x_n^{\lambda_n}}
-      \\&= \prod_{n=1}^{\xN} x_n^{\lambda_n}
+       &&= \exp\brb{\ln\prod_{n=1}^{\xN}x_n^{\lambda_n}}
+         = \prod_{n=1}^{\xN} x_n^{\lambda_n}
     \end{align*}
     \footnotetext{
       \citerpgc{rudinp}{109}{007054235X}{5.13 Theorem}
@@ -480,7 +421,7 @@ Let $\Rx$ be the set of extended real numbers $\brp{\Rx\eqd\R\setu\setn{-\infty,
 %\footnote{
 %  \citerpg{bullen2003}{71}{1402015224},
 %  \citerpg{bollobas1999}{5}{0521655773},
-%  \citorppc{cauchy1821}{457}{459}{Note II, theorem 17},
+%  \citerppc{cauchy1821}{457}{459}{Note II, theorem 17},
 %  \citorp{jensen1906}{183}
 %  }
 \label{def:am}
@@ -488,29 +429,36 @@ Let $\Rx$ be the set of extended real numbers $\brp{\Rx\eqd\R\setu\setn{-\infty,
 \label{def:hm}
 \label{def:average}
 %--------------------------------------
-Let $\tuplen{x_n}_1^\xN$ be a tuple. Let $\tuplen{\lambda_n}_1^\xN$ be a tuple of weighting values such that
-$\ds\sum_{n=1}^\xN\lambda_n=1$.
-\defbox{\begin{array}{Mrc>{\ds}l}
+Let $\tuplen{x_n}_1^\xN$ be a tuple. Let $\tuplen{\lambda_n}_1^\xN$ be a tuple of weighting values. 
+%such that $\ds\sum_{n=1}^\xN\lambda_n=1$.
+\defbox{\begin{array}{Mrc>{\ds}lM>{\ds}l}
   The \fnctd{harmonic mean} of $\tuplen{x_n}$ is defined as 
     & \mu_h &\eqd& \brp{\sum_{n=1}^\xN \lambda_n \frac{1}{x_n}}^{-1}
+    & where & \sum_{n=1}^\xN\lambda_n=1
     \\
   The \fnctd{geometric mean} of $\tuplen{x_n}$ is defined as 
     & \mu_g &\eqd& \sum_{n=1}^\xN x_n^{\lambda_n}
+    & where & \sum_{n=1}^\xN\lambda_n=1
     \\
   The \fnctd{arithmetic mean} of $\tuplen{x_n}$ is defined as 
     & \mu_a &\eqd& \sum_{n=1}^\xN \lambda_n x_n
+    & where & \sum_{n=1}^\xN\lambda_n=1
     \\
   The \fnctd{average} of $\tuplen{x_n}$ is defined as 
     & \mu_a &\eqd& \frac{1}{\xN}\sum_{n=1}^\xN x_n
+    & %where & \sum_{n=1}^\xN\lambda_n=1
 \end{array}}
 \end{definition}
 
+%=======================================
+\section{Inequalities on power means}
+%=======================================
 %--------------------------------------
 \begin{corollary}
 \footnote{
   \citerpg{bullen2003}{71}{1402015224},
   \citerpg{bollobas1999}{5}{0521655773},
-  \citorppc{cauchy1821}{457}{459}{Note II, theorem 17},
+  \citerppc{cauchy1821}{457}{459}{Note II, theorem 17},
   \citorp{jensen1906}{183}
   }
 \index{AM-GM inequality}
@@ -535,7 +483,7 @@ $\ds\sum_{n=1}^\xN\lambda_n=1$.
 \end{corollary}
 \begin{proof}
 \begin{enumerate}
-  \item These five means are all special cases of the \hie{power mean} $\fM_{\fphi(x:r)}$ (\prefp{def:seq_Mr}):
+  \item These five means are all special cases of the \fncte{power mean} $\fM_{\fphi(x:r)}$ (\prefp{def:seq_Mr}):
     \\\begin{tabular}{ll}
         $r=\infty$:  & $\max\tuplen{x_n}$
       \\$r=1$:       & arithmetic mean
@@ -547,26 +495,22 @@ $\ds\sum_{n=1}^\xN\lambda_n=1$.
   \item The inequalities follow directly from \prefpp{thm:seq_Mr}.
 
   \item \thm{Generalized AM-GM inequality}: If one is only concerned with the arithmetic mean and
-        geometric mean, their relationship can be established directly using \thme{Jensen's Inequality}:
+        geometric mean, their relationship can be established directly using \ineqe{Jensen's Inequality}:
     \begin{align*}
       \sum_{n=1}^\xN \lambda_n x_n
         &=   b^{\log_b\left(\sum_{n=1}^\xN \lambda_n x_n\right)}
-      \\&\ge b^{\left(\sum_{n=1}^\xN \lambda_n \log_b x_n\right)}
-        &&   \text{by \thme{Jensen's Inequality}\ifsxref{convex}{thm:jensen_ineq}}
+         \ge b^{\left(\sum_{n=1}^\xN \lambda_n \log_b x_n\right)}
+         \quad\text{by \ineqe{Jensen's Inequality}\ifsxref{convex}{thm:jensen_ineq}}
       \\&=   \prod_{n=1}^\xN b^{\left(\lambda_n \log_b x_n\right)}
-      \\&=   \prod_{n=1}^\xN b^{\left(\log_b x_n\right)\lambda_n }
-      \\&=   \prod_{n=1}^\xN x_n^{\lambda_n}
+         =   \prod_{n=1}^\xN b^{\left(\log_b x_n\right)\lambda_n }
+         =   \prod_{n=1}^\xN x_n^{\lambda_n}
     \end{align*}
 \end{enumerate}
 \end{proof}
 
 
-%=======================================
-%\section{Inequalities}
-%=======================================
-
 %--------------------------------------
-\begin{lemma}[\thmd{Young's Inequality}]
+\begin{lemma}[\ineqd{Young's Inequality}]
 \footnote{
   \citerp{carothers2000}{43},
   \citerp{tolsted1964}{5},
@@ -664,7 +608,7 @@ $\ds\sum_{n=1}^\xN\lambda_n=1$.
 
 
 %--------------------------------------
-\begin{theorem}[\thmd{H/:older's Inequality}]
+\begin{theorem}[\ineqd{H/:older's Inequality}]
 \footnote{
   \citerpgc{bullen2003}{178}{1402015224}{2.1},
   \citerp{carothers2000}{44},
@@ -698,7 +642,8 @@ Let $\tuplexn{x_n\in\C}$ and $\tuplexn{y_n\in\C}$ be complex $\xN$-tuples.
   \\&\le \norm{\seqn{x_n}}_p\norm{\seqn{y_n}}_q
        \sum_{n=1}^{\xN} \brp{\frac{1}{p}\frac{\abs{x_n}^p}{\norm{\seqn{x_n}}_p^p} +
                           \frac{1}{q}\frac{\abs{y_n}^q}{\norm{\seqn{y_n}}_q^q}}
-    && \text{by \thme{Young's Inequality} \xref{lem:lp_young}}
+    && \text{by \thme{Young's Inequality}}
+    && \text{\xref{lem:lp_young}}
   \\&= \norm{\seqn{x_n}}_p\norm{\seqn{y_n}}_q
        \brp{
          \frac{1}{p} \cdot \frac{\ds\sum\abs{x_n}^p}{\norm{\seqn{x_n}}_p^p}
@@ -720,7 +665,7 @@ Let $\tuplexn{x_n\in\C}$ and $\tuplexn{y_n\in\C}$ be complex $\xN$-tuples.
 
 
 %--------------------------------------
-\begin{theorem}[\thmd{Minkowski's Inequality for sequences}]
+\begin{theorem}[\ineqd{Minkowski's Inequality for sequences}]
 \footnote{
   \citerpg{bullen2003}{179}{1402015224},
   \citerp{carothers2000}{44},
@@ -746,43 +691,50 @@ Let $\tuplexn{x_n\in\C}$ and $\tuplexn{y_n\in\C}$ be complex $\xN$-tuples.
 \begin{proof}
 \mbox{}\\
 \begin{enumerate}
-  \item Define $q$ in terms of $p$ such that $\frac{1}{p}+\frac{1}{q}=1$
+  \item Define $\ds q\eqd\frac{p}{p-1}$ \label{idef:lp_minkowski_q}
+  %\item Define $q$ in terms of $p$ such that $\frac{1}{p}+\frac{1}{q}=1$
+  %\item lemma: $\ds\frac{1}{q} = \frac{p-1}{p}$. Proof:  \label{ilem:lp_minkowski_qp}
+  %  \begin{align*}
+  %    \frac{1}{p}+\frac{1}{q}=1
+  %      &\iff \frac{1}{q} = 1-\frac{1}{p}
+  %    \\&\iff \frac{1}{q} = \frac{p-1}{p}
+  %  \end{align*}
 
-  \item Proof that $\frac{1}{q} = \frac{p-1}{p}$:  \label{item:lp_minkowski_qp}
-    \begin{align*}
-      \frac{1}{p}+\frac{1}{q}=1
-        &\iff \frac{1}{q} = 1-\frac{1}{p}
-      \\&\iff \frac{1}{q} = \frac{p-1}{p}
-    \end{align*}
-
-  \item Define $\normn$ as follows:
-    \[ \norm{\vx}_p \eqd \brp{\sum_{n=1}^{\xN} \abs{x_n}^p}^\frac{1}{p} \]
+  \item Define $\ds\norm{\vx}_p \eqd \brp{\sum_{n=1}^{\xN} \abs{x_n}^p}^\frac{1}{p}$.
+        \label{idef:lp_minkowski_norm}
 
   \item Proof that $\norm{x_n+y_n}_p \le \norm{x_n}_p + \norm{y_n}_p$:
     \begin{align*}
-      \norm{x_n+y_n}_p^p
-        &= \sum_{n=1}^{\xN} \abs{x_n+y_n}^p
+      &\boxed{\norm{x_n+y_n}_p^p}
+      \\&= \sum_{n=1}^{\xN} \abs{x_n+y_n}^p
         && \text{by definition of $\normn_p$}
+        && \text{\xref{idef:lp_minkowski_norm}}
       \\&= \sum_{n=1}^{\xN} \abs{x_n+y_n} \abs{x_n+y_n}^{p-1}
-        && \text{by homogeneous property of $\absn$\ifdochas{numsys}{ \prefpo{thm:C_norm}}}
-      \\&\le \sum_{n=1}^{\xN} \abs{x_n} \abs{x_n+y_n}^{p-1} +
+        && \text{by \prope{homogeneous} property of $\absn$}
+        && \text{\ifxref{numsys}{thm:C_norm}}
+      \\&\boxed{\le} \sum_{n=1}^{\xN} \abs{x_n} \abs{x_n+y_n}^{p-1} +
                 \sum_{n=1}^{\xN} \abs{y_n} \abs{x_n+y_n}^{p-1}
-        && \text{by subadditive property of $\absn$\ifdochas{numsys}{ \prefpo{thm:C_norm}}}
+        && \text{by \prope{subadditive} property of $\absn$}
+        && \text{\ifxref{numsys}{thm:C_norm}}
       \\&= \sum_{n=1}^{\xN} \abs{x_n (x_n+y_n)^{p-1}} +
                 \sum_{n=1}^{\xN} \abs{y_n (x_n+y_n)^{p-1}}
-        && \text{by homogeneous property of $\absn$\ifdochas{numsys}{ \prefpo{thm:C_norm}}}
-      \\&\le \norm{x_n}_p \norm{(x_n+y_n)^{p-1}}_q + \norm{y_n}_p \norm{(x_n+y_n)^{p-1}}_q
-        && \text{by H/:older's Inequality \prefpo{thm:lp_holder}}
+        && \text{by \prope{homogeneous} property of $\absn$}
+        && \text{\ifxref{numsys}{thm:C_norm}}
+      \\&\boxed{\le} \norm{x_n}_p \norm{(x_n+y_n)^{p-1}}_q + \norm{y_n}_p \norm{(x_n+y_n)^{p-1}}_q
+        && \text{by \ineqe{H/:older's Inequality}}
+        && \text{\xref{thm:lp_holder}}
       \\&= \brp{\norm{x_n}_p+\norm{y_n}_p} \norm{(x_n+y_n)^{p-1}}_q
       \\&= \brp{\norm{x_n}_p+\norm{y_n}_p} \brp{\sum_{n=1}^{\xN}\abs{(x_n+y_n)^{p-1}}^q}^\frac{1}{q}
         && \text{by definition of $\normn_p$}
+        && \text{\xref{idef:lp_minkowski_norm}}
       \\&= \brp{\norm{x_n}_p+\norm{y_n}_p} \brp{\sum_{n=1}^{\xN}\abs{(x_n+y_n)^{p-1}}^\frac{p}{p-1}}^\frac{p-1}{p}
-        && \text{by \pref{item:lp_minkowski_qp}}
+        && \text{by \pref{idef:lp_minkowski_q}}
       \\&= \brp{\norm{x_n}_p+\norm{y_n}_p} \brp{\sum_{n=1}^{\xN}\abs{(x_n+y_n)}^p}^\frac{p-1}{p}
       \\&= \brp{\norm{x_n}_p+\norm{y_n}_p} \norm{x_n+y_n}^{p-1}
-      \\&\implies \norm{x_n+y_n}_p \le \norm{x_n}_p+\norm{y_n}_p
+        && \text{by definition of $\normn_p$}
+        && \text{\xref{idef:lp_minkowski_norm}}
+      \\&\implies\quad\boxed{\norm{x_n+y_n}_p \le \norm{x_n}_p+\norm{y_n}_p}
     \end{align*}
-
   \end{enumerate}
 \end{proof}
 
@@ -805,14 +757,14 @@ Let $\tuplexn{x_n\in\C}$ and $\tuplexn{y_n\in\C}$ be complex $\xN$-tuples.
   \end{tabular}}
 
 %---------------------------------------
-\begin{theorem}[\thm{Cauchy-Schwarz Inequality}]
+\begin{theorem}[\ineqd{Cauchy-Schwarz Inequality for sequences}]
 \footnote{
   %\citerpg{bullen2003}{183}{1402015224}\\ ???
   \citerp{ab}{278},
-  \citor{schwarz1885},
-  \citor{bouniakowsky1859},
+  \citeP{schwarz1885},
+  \citeP{bouniakowsky1859},
   \citerpgc{hardy1934}{25}{0521358809}{Theorem 11},
-  \citorpc{cauchy1821}{455}{???}
+  \citerpc{cauchy1821}{455}{???}
   }
 \label{thm:seq_cs}
 \index{inequalities!Cauchy-Schwarz}
@@ -830,18 +782,29 @@ Let $\tuplexn{x_n\in\C}$ and $\tuplexn{y_n\in\C}$ be complex $\xN$-tuples.
 \end{theorem}
 \begin{proof}
 \begin{enumerate}
-  \item The Cauchy-Schwarz inequality for sequences is a special case of the H/:older inequality (\pref{thm:lp_holder})
+  \item The \ineqe{Cauchy-Schwarz Inequality for sequences} is a special case of the \ineqe{H/:older inequality} \xref{thm:lp_holder}
         for $p=q=2$.
 
-  \item Alternatively, the Cauchy-Schwarz inequality for sequences is a special case of
-        the \hie{Cauchy-Schwarz inequality} in inner-product spaces:
+  \item Alternatively, the \ineqe{Cauchy-Schwarz inequality for sequences} is a special case of
+        the \ineqe{Cauchy-Schwarz inequality for inner-product spaces}:
     \begin{enumerate}
       \item $\inprod{x_n}{y_n}\eqd\sum_{n=1}^{\xN}x_n y_n$ is an inner-product and $\opair{\tuplen{x_n}}{\inprodn}$ is an inner-product space.
-      \item By the \hie{Cauchy-Schwarz Inequality for inner-product spaces}\ifdochas{vsinprod}{ (\prefp{thm:cs})},
-        \[\abs{\inprod{\vx}{\vy}}^2 \le \inprod{\vx}{\vx} \; \inprod{\vy}{\vy}\]
+      \item By the more general \ineqe{Cauchy-Schwarz Inequality for inner-product spaces},
+        \begin{align*}
+          \brp{\sum_{n=1}^{\xN} a_n\lambda_n}^2
+            &\eqd \inprod{a_n}{\lambda_n}^2
+            && \text{by definition of $\inprod{x_n}{y_n}$}
+          \\&\boxed{\leq} \norm{x_n}^2\norm{y_n}^2
+            && \begin{array}{MM}
+                 by & \ineqe{Cauchy-Schwarz Inequality for inner-product spaces}\\
+                    & \xref{thm:cs}
+               \end{array}
+          \\&\eqd \brp{\sum_{n=1}^{\xN} x_n^2} \brp{\sum_{n=1}^{\xN} y_n^2}
+            && \text{by definition of $\normn$}
+        \end{align*}
     \end{enumerate}
 
-  \item Not only does the H/:older inequality imply the Cauchy-Schwarz inequality, but somewhat surprisingly,
+  \item Not only does the \ineqe{H/:older inequality} imply the \ineqe{Cauchy-Schwarz inequality}, but somewhat surprisingly,
         the converse is also true: The Cauchy-Schwarz inequality implies the H/:older inequality.%
         \footnote{
             \citerppgc{bullen2003}{183}{185}{1402015224}{Theorem 5}
@@ -872,84 +835,6 @@ Let $\tuplexn{x_n\in\C}$ and $\tuplexn{y_n\in\C}$ be complex $\xN$-tuples.
 \end{align*}
 \end{proof}
 
-
-% see calculus.tex% %=======================================
-% see calculus.tex% \section{Differentiation}
-% see calculus.tex% %=======================================
-% see calculus.tex% Some proofs require differentiation multiple times.
-% see calculus.tex% This is simplified thanks to the \thme{Leibniz rule}, also called the
-% see calculus.tex% \hie{generalized product rule} (\hie{GPR}, next lemma).
-% see calculus.tex% The Leibniz rule is remarkably similar in form to the \thme{binomial theorem}.
-% see calculus.tex% %--------------------------------------
-% see calculus.tex% \begin{lemma}[Leibniz rule]
-% see calculus.tex% %\footnote{\url{http://en.wikipedia.org/wiki/Leibniz_rule_(generalized_product_rule)}}
-% see calculus.tex% \index{Leibniz rule}
-% see calculus.tex% \index{generalized product rule}
-% see calculus.tex% \index{binomial coefficient}
-% see calculus.tex% \label{lem:LGPR}
-% see calculus.tex% \footnote{
-% see calculus.tex%   \citerpg{benisrael2002}{154}{3211829245},
-% see calculus.tex%   \citor{leibniz1710}
-% see calculus.tex%   }
-% see calculus.tex% %--------------------------------------
-% see calculus.tex% Let $\ff(x),\fg(x)\in\spLL$ with derivatives
-% see calculus.tex% $\ff^{(n)}(x)\eqd\deriv{^n}{x^n}\ff(x)$ and
-% see calculus.tex% $\fg^{(n)}(x)\eqd\deriv{^n}{x^n}\fg(x)$ for $n=0,1,2,\ldots$,
-% see calculus.tex% and ${n\choose k}\eqd\frac{n!}{(n-k)!k!}$ (binomial coefficient).
-% see calculus.tex% Then
-% see calculus.tex% \lembox{
-% see calculus.tex%   \deriv{^n}{x^n}[\ff(x)\fg(x)] =
-% see calculus.tex%   \sum_{k=0}^n {n\choose k} \ff^{(k)}(x) \fg^{(n-k)}(x)
-% see calculus.tex%   }
-% see calculus.tex% \end{lemma}
-
-
-% see calculus.tex% %---------------------------------------
-% see calculus.tex% \begin{theorem}
-% see calculus.tex% \footnote{
-% see calculus.tex%   \citerpgc{chui}{86}{0121745848}{item (ii)}
-% see calculus.tex%   }
-% see calculus.tex% \label{thm:int01}
-% see calculus.tex% %---------------------------------------
-% see calculus.tex% Let $\ff$ be a continuous function in $\clFrc$ and $\ff^{(n)}$ the $n$th derivative of $\ff$.
-% see calculus.tex% \thmbox{
-% see calculus.tex%   \int_{\intcc{0}{1}^n} \ff^{(n)}\brp{\sum_{k=1}^n x_k} \dx_1\dx_2\cdots\dx_n = \sum_{k=0}^n (-1)^{n-k}\bcoef{n}{k}\ff(k)
-% see calculus.tex%   \qquad\forall n\in\Zp
-% see calculus.tex%   }
-% see calculus.tex% \end{theorem}
-% see calculus.tex% \begin{proof}
-% see calculus.tex% Proof by induction:
-% see calculus.tex%   \begin{enumerate}
-% see calculus.tex%     \item Proof for $n=1$ case:
-% see calculus.tex%       \begin{align*}
-% see calculus.tex%         \int_\intcc{0}{1} \ff^{(1)}\brp{x} \dx
-% see calculus.tex%           &= \left.\ff(x)\right|_0^1
-% see calculus.tex%         \\&= \ff(1)-\ff(0)
-% see calculus.tex%         \\&= (-1)^{1+1}\bcoef{1}{1}\ff(1) + (-1)^{1+0}\bcoef{1}{0}\ff(0)
-% see calculus.tex%         \\&= \sum_{k=0}^n (-1)^{n-k}\bcoef{n}{k}\ff(k)
-% see calculus.tex%       \end{align*}
-% see calculus.tex%
-% see calculus.tex%     \item Proof that $n$ case $\implies$ $n+1$ case:
-% see calculus.tex%       \begin{align*}
-% see calculus.tex%         &\int_{\intcc{0}{1}^{n+1}} \ff^{(n+1)}\brp{\sum_{k=1}^n x_k} \dx_1\dx_2\cdots\dx_{n+1}
-% see calculus.tex%         \\&= \int_{\intcc{0}{1}^n}\brb{\left. \ff^{(n)}\brp{x_{n+1}+\sum_{k=1}^n x_k}\right|_0^1} \dx_1\dx_2\cdots\dx_n
-% see calculus.tex%         \\&= \int_{\intcc{0}{1}^n}{\ff^{(n)}\brp{1+\sum_{k=1}^n x_k}-\ff^{(n)}\brp{0+\sum_{k=1}^n x_k}} \dx_1\dx_2\cdots\dx_n
-% see calculus.tex%         \\&= \sum_{k=0}^n (-1)^{n-k}\bcoef{n}{k}\ff(k+1) - \sum_{k=0}^n (-1)^{n-k}\bcoef{n}{k}\ff(k)
-% see calculus.tex%           \qquad\text{by $n$ case hypothesis}
-% see calculus.tex%         \\&= \sum_{k=1}^{n+1} (-1)^{n-k+1}\bcoef{n}{k-1}\ff(k) + \sum_{k=0}^n (-1)(-1)^{n-k}\bcoef{n}{k}\ff(k)
-% see calculus.tex%         \\&= \brb{ \ff(n+1)+ \sum_{k=1}^{n} (-1)^{n-k+1}\bcoef{n}{k-1}\ff(k) }
-% see calculus.tex%            + \brb{ (-1)^{n+1} \ff(0) + \sum_{k=1}^n (-1)^{n-k+1}\bcoef{n}{k}\ff(k)}
-% see calculus.tex%         \\&= \ff(n+1) + (-1)^{n+1}\ff(0)
-% see calculus.tex%             + \sum_{k=1}^{n} (-1)^{n-k+1}\brs{\bcoef{n}{k-1}+\bcoef{n}{k}}\ff(k)
-% see calculus.tex%         \\&= \ff(n+1) + (-1)^{n+1}\ff(0)
-% see calculus.tex%             + \sum_{k=1}^{n} (-1)^{n-k+1}\bcoef{n+1}{k}\ff(k)
-% see calculus.tex%           \qquad\text{by \thme{Pascal's Recursion} \ifxref{binomial}{thm:stifel}}
-% see calculus.tex%         \\&= \sum_{k=0}^{n+1} (-1)^{n-k+1}\bcoef{n+1}{k}\ff(k)
-% see calculus.tex%       \end{align*}
-% see calculus.tex%   \end{enumerate}
-% see calculus.tex% \end{proof}
-
-
 %=======================================
 \section{Power Sums}
 %=======================================
@@ -968,12 +853,12 @@ Let $\tuplexn{x_n\in\C}$ and $\tuplexn{y_n\in\C}$ be complex $\xN$-tuples.
 \end{theorem}
 \begin{proof}
 \begin{align*}
-  \sum_{k=0}^{n-1} r^k
+  \boxed{\sum_{k=0}^{n-1} r^k}
     &= \brp{\frac{1}{1-r}}\brs{\brp{1-r}\sum_{k=0}^{n-1} r^k}
-  \\&= \brp{\frac{1}{1-r}}\brs{\sum_{k=0}^{n-1} r^k - r\sum_{k=0}^{n-1} r^k}
-  \\&= \brp{\frac{1}{1-r}}\brs{\sum_{k=0}^{n-1} r^k - \brp{\sum_{k=0}^{n-1} r^k -1 + r^n}}
+     = \brp{\frac{1}{1-r}}\brs{\sum_{k=0}^{n-1} r^k - r\sum_{k=0}^{n-1} r^k}
+     = \brp{\frac{1}{1-r}}\brs{\sum_{k=0}^{n-1} r^k - \brp{\sum_{k=0}^{n-1} r^k -1 + r^n}}
   \\&= \brp{\frac{1}{1-r}}\brs{1 - r^n}
-  \\&= \frac{1-r^n}{1-r}
+     = \boxed{\frac{1-r^n}{1-r}}
 \end{align*}
 \end{proof}
 
@@ -981,7 +866,7 @@ Let $\tuplexn{x_n\in\C}$ and $\tuplexn{y_n\in\C}$ be complex $\xN$-tuples.
 \begin{lemma}
 \label{lem:series_sumT}
 %--------------------------------------
-Let $\ff(t)$ be a function.
+Let $\ff(x)$ be a function.
 \lembox{
   \fS(x)\eqd\sum_{n\in\Z} \ff(x+n\tau) = \fS(x+\tau) \qquad \text{($\fS(x)$ is \prope{periodic} with period $\tau$)}
 }
@@ -990,13 +875,12 @@ Let $\ff(t)$ be a function.
 \begin{align*}
   \fS(x+\tau)
     &\eqd \sum_{n\in\Z} \ff(x+\tau+n\tau)
-  \\&=    \sum_{n\in\Z} \ff(x+(n+1)\tau)
-  \\&=    \sum_{m\in\Z} \ff(x+m\tau)
-    &&    \text{where $m\eqd n+1$}
+     =    \sum_{n\in\Z} \ff(x+(n+1)\tau)
+     =    \sum_{m\in\Z} \ff(x+m\tau)
+     \quad\text{(where $m\eqd n+1$)}
   \\&\eqd \fS(x)
 \end{align*}
 \end{proof}
-
 
 %--------------------------------------
 \begin{proposition}[\thmd{Power Sums}]
@@ -1007,11 +891,9 @@ Let $\ff(t)$ be a function.
   }
 \label{prop:powersums}
 %--------------------------------------
-\propbox{\begin{array}{>{\ds}lc>{\ds}l @{\qquad}C}
-  \sum_{k=1}^n k   &=& \frac{n(n+1)}{2}        &\forall n\in\Zp  \\
-  \sum_{k=1}^n k^2 &=& \frac{n(n+1)(2n+1)}{6}  &\forall n\in\Zp  \\
-  \sum_{k=1}^n k^3 &=& \frac{n^2(n+1)^2}{4}  &\forall n\in\Zp  \\
-  \sum_{k=1}^n k^4 &=& \frac{n(n+1)(2n+1)(3n^2+3n-1)}{30}  &\forall n\in\Zp
+\propbox{\begin{array}{>{\ds}lc>{\ds}lC | >{\ds}lc>{\ds}lC }
+    \sum_{k=1}^n k   &=& \frac{n(n+1)}{2}        &\forall n\in\Zp & \sum_{k=1}^n k^3 &=& \frac{n^2(n+1)^2}{4}  &\forall n\in\Zp
+  \\\sum_{k=1}^n k^2 &=& \frac{n(n+1)(2n+1)}{6}  &\forall n\in\Zp & \sum_{k=1}^n k^4 &=& \frac{n(n+1)(2n+1)(3n^2+3n-1)}{30}  &\forall n\in\Zp
 \end{array}}
 \end{proposition}
 \begin{proof}
@@ -1019,31 +901,31 @@ Let $\ff(t)$ be a function.
 \intertext{1. Proof that $\sum_{k=1}^n k=\frac{n(n+1)}{2}$: (proof by induction)}
   \sum_{k=1}^{n=1} k
     &= 1
-  \\&= \frac{1(1+1)}{2}
-  \\&= \left.\frac{n(n+1)}{2}\right|_{n=1}
+     = \frac{1(1+1)}{2}
+     = \left.\frac{n(n+1)}{2}\right|_{n=1}
   \\
   \sum_{k=1}^{n+1} k
     &= \Bigg(\sum_{k=1}^n k\Bigg) + \Bigg(n+1\Bigg)
-  \\&= \Bigg(\frac{n(n+1)}{2}\Bigg) + \Bigg(n+1\Bigg)
-    && \text{by left hypothesis}
-  \\&= \Bigg(n+1\Bigg)\Bigg(\frac{n}{2}+1\Bigg)
+     = \mcom{\Bigg(\frac{n(n+1)}{2}\Bigg) + \Bigg(n+1\Bigg)}
+       {by left hypothesis}
+     = \Bigg(n+1\Bigg)\Bigg(\frac{n}{2}+1\Bigg)
   \\&= \Bigg(n+1\Bigg)\Bigg(\frac{n+2}{2}\Bigg)
-  \\&= \frac{(n+1)(n+2)}{2}
+     = \frac{(n+1)(n+2)}{2}
   \\
 \intertext{2. Proof that $\sum_{k=1}^n k^2 = \frac{n(n+1)(2n+1)}{6}$: (proof by induction)}
   \sum_{k=1}^{n=1} k^2
     &= 1
-  \\&= \frac{1(1+1)(2+1)}{6}
-  \\&= \left.\frac{n(n+1)(2n+1)}{6}\right|_{n=1}
+     = \frac{1(1+1)(2+1)}{6}
+     = \left.\frac{n(n+1)(2n+1)}{6}\right|_{n=1}
   \\
   \sum_{k=1}^{n+1} k^2
     &= \Bigg(\sum_{k=1}^n k^2\Bigg) + \Bigg(n+1\Bigg)^2
-  \\&= \Bigg(\frac{n(n+1)(2n+1)}{6}\Bigg) + \Bigg(n+1\Bigg)^2
-    && \text{by left hypothesis}
-  \\&= \Bigg(n+1\Bigg)\Bigg(\frac{n(2n+1)+6(n+1)}{6}\Bigg)
+     = \mcom{\Bigg(\frac{n(n+1)(2n+1)}{6}\Bigg) + \Bigg(n+1\Bigg)^2}
+            {by left hypothesis}
+     = \Bigg(n+1\Bigg)\Bigg(\frac{n(2n+1)+6(n+1)}{6}\Bigg)
   \\&= \Bigg(n+1\Bigg)\Bigg(\frac{2n^2+7n+6}{6}\Bigg)
-  \\&= \Bigg(n+1\Bigg)\Bigg(\frac{(n+2)(2n+3)}{6}\Bigg)
-  \\&= \frac{(n+1)[(n+1)+1][2(n+1)+1]}{6}
+     = \Bigg(n+1\Bigg)\Bigg(\frac{(n+2)(2n+3)}{6}\Bigg)
+     = \frac{(n+1)[(n+1)+1][2(n+1)+1]}{6}
 \end{align*}
 \end{proof}
 
