--- a/common/vsinprod.tex
+++ b/common/vsinprod.tex
@@ -187,7 +187,7 @@ In fact, we will use this inequality shortly to prove that
 every inner product space {\em has} a norm
 and therefore every inner product space {\em is} a normed linear space.
 %---------------------------------------
-\begin{theorem}[\thmd{Cauchy-Schwarz Inequality}]
+\begin{theorem}[\ineqd{Cauchy-Schwarz Inequality}]
 \footnote{
   \citerpg{haaser1991}{278}{0486665097},
   \citerp{ab}{278},
@@ -334,8 +334,8 @@ and is called the \structe{norm induced by the inner product $\inprodn$} \xref{d
   \begin{enumerate}
 
     \item Proof that
-            $\Big(a\lambda^2+b\lambda+c\ge0\qquad\forall \lambda\in\R\Big) \quad\implies b^2\le4ac$
-            (\prop{quadratic discriminate inequality}): \index{inequalities!quadratic discriminate}
+            $\ds\brb{a\lambda^2+b\lambda+c\ge0\qquad\forall \lambda\in\R} \quad\implies\quad \brb{b^2\le4ac}$
+            (\ineqd{quadratic discriminate inequality}): 
 
         {\color{figcolor}
         \begin{center}
@@ -477,7 +477,7 @@ Let $\norm{\vx} \eqd \sqrt{\inprod{\vx}{\vx}}$.
     && \text{by \prope{additivity} of $\inprodn$}&&\text{\xref{def:inprod}}
   \\&= \abs{\inprod{\vepsilon}{\vy}}^2
   \\&\le \norm{\vepsilon}^2\norm{\vy}    
-    && \text{by \thme{Cauchy-Schwarz Inequality}}&&\text{\xref{thm:cs}}
+    && \text{by \ineqe{Cauchy-Schwarz Inequality}}&&\text{\xref{thm:cs}}
 \end{align*}
 \end{proof}
 
@@ -576,15 +576,12 @@ The function $\normn$ is a \structe{norm} \xrefP{thm:norm=inprod} and is called 
 
 
 %--------------------------------------
-\begin{theorem}[\thmd{Minkowski's inequality}]
+\begin{theorem}[\ineqd{Minkowski's Inequality}]
 \footnote{
   \citerppgc{ab}{278}{279}{0120502577}{Theorem 32.3},
   \citer{maligranda1995},
   \citorp{minkowski1910}{115} 
   }
-\label{thm:vsi_minkowski}
-\label{thm:minkowineq}
-\index{inequalities!Minkowski}
 %--------------------------------------
 Let $\inprodspaceX$ be an \structe{inner product space}.
 Let $\normn$ be a function in $\clFfr$ such that $\norm{\vx}\eqd\sqrt{\inprod{\vx}{\vx}}$.\footnote{
@@ -601,10 +598,12 @@ The function $\normn$ is a \structe{norm} \xrefP{thm:norm=inprod} and is called 
   \begin{align*}
     \norm{\vx+\vy}^2
       &=    \norm{\vx}^2 +2\Re{\inprod{\vx}{\vy}} + \norm{\vy}^2 
-      &&    \text{by \thme{Polar Identity} \xref{lem:||x+y||}}
+      &&    \text{by \thme{Polar Identity}} 
+      &&    \text{\xref{lem:||x+y||}}
     \\&\le  \norm{\vx}^2 + 2\abs{\inprod{\vx}{\vy}} +\norm{\vy}^2
     \\&\le  \norm{\vx}^2 + 2\sqrt{\inprod{\vx}{\vx}} \sqrt{\inprod{\vy}{\vy}} + \norm{\vy}^2
-      &&    \text{by \thme{Cauchy-Schwarz Inequality} \xref{thm:cs}}
+      &&    \text{by \ineqe{Cauchy-Schwarz Inequality}} 
+      &&    \text{\xref{thm:cs}}
     \\&=    \brp{\norm{\vx} + \norm{\vy}}^2
   \end{align*}
 \end{proof}
@@ -1358,7 +1357,6 @@ Let $\norm{\seqxZ{x_n}}_p$ be the $\splpF$ norm\ifsxref{seq}{def:lp_norm} of the
 %=======================================
 \section{Orthogonality}
 %=======================================
-%\ifdochasnot{relation}{
 %---------------------------------------
 \begin{definition}
 \label{def:kdelta}
@@ -1375,7 +1373,6 @@ The \fnctd{Kronecker delta function} $\hxs{\kdelta_n}$ is defined as
   \forall n\in\Z$
 \end{array}}
 \end{definition}
-%}
 
 %--------------------------------------
 \begin{definition}
@@ -1423,24 +1420,20 @@ Let $\inprodspaceX$ be an \structe{inner product space}.
      \\
   2. & \vx \orthog \vy \implies \alpha\vx\orthog\vy 
      & \forall \alpha\in\R, \vx,\vy\in\setX
-     & (\prop{homogeneous})
+     & (\prope{homogeneous})
      \\
   3. & \vx \orthog \vy \iff \vy \orthog \vx
      & \forall \vx,\vy\in\setX
-     & (\prop{symmetry})
+     & (\prope{symmetry})
      \\
   4. & \vx \orthog \vy \text{ and } \vy \orthog \vz \implies \vx\orthog(\vy + \vz)
      & \forall \vx,\vy,\vz\in\setX
-     & (\prop{additive})
+     & (\prope{additive})
      \\
   5. & \exists \beta\in\R \st \vx \orthog (\beta\vx+\vy)
      & \forall \vx\in\setX\setd\vzero,\, \vy\in\setX
 \end{array}}
 \end{theorem}
-
-
-
-
 
 %--------------------------------------
 \begin{theorem}
@@ -1502,13 +1495,13 @@ Let $\inprodspaceX$ be an \structe{inner product space}.
 \end{enumerate}
 \end{proof}
 
-The \thme{triangle inequality}\index{inequality!triangle} 
-theorem for vectors in a \structe{normed linear space}\ifsxref{vsnorm}{thm:norm_tri}
-demonstrates that 
+The \ineqe{triangle inequality for vectors} 
+in a \structe{normed linear space}\ifsxref{vsnorm}{thm:norm_tri}
+demonstrates that
   \\\indentx\tbox{$\ds\norm{\sum_{n=1}^\xN \vx_n} \le \sum_{n=1}^\xN \norm{\vx_n}.$}
 \hfill\begin{minipage}{\tw-50mm}
   The \thme{Pythagorean Theorem} (next) demonstrates that this 
-  {\em inequality} becomes {\em equality} when the set $\setn{\vx_n}$ is orthogonal.
+  {\em inequality} becomes {\em equality} when the set $\setn{\vx_n}$ is \prope{orthogonal}.
 \end{minipage}\\
 %--------------------------------------
 \begin{theorem}[\thmd{Pythagorean Theorem}]
@@ -1520,7 +1513,7 @@ demonstrates that
   }
 \label{thm:pythag}
 %--------------------------------------
-Let $\setxn{\vx_n\in\setX}$ be a set of vectors in an \structe{inner product space} \xrefP{def:inprod} $\inprodspaceX$ and let
+Let $\setxn{\vx_n\in\setX}$ be a set of vectors in an \structe{inner product space} \xref{def:inprod} $\inprodspaceX$ and let
 $\norm{\vx}\eqd\sqrt{\inprod{\vx}{\vx}}$\ifsxref{vsinprod}{def:norm=inprod}.
 \thmbox{\begin{array}{>{\ds}c}
   \text{$\setn{\vx_n}$ is \prope{orthogonal}}
@@ -1575,15 +1568,6 @@ $\norm{\vx}\eqd\sqrt{\inprod{\vx}{\vx}}$\ifsxref{vsinprod}{def:norm=inprod}.
     \end{align*}
 \end{proof}
 
-
-
-
-
-
-%=======================================
-%\section{Complete }
-%=======================================
-
 %%=======================================
 %\section{Literature}
 %%=======================================
@@ -1607,8 +1591,4 @@ $\norm{\vx}\eqd\sqrt{\inprod{\vx}{\vx}}$\ifsxref{vsinprod}{def:norm=inprod}.
 %
 %\end{enumerate}
 %\end{survey}
-
-
-
-
 
